Cap 13/nodejs-mongo-kubernetes/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: frontend
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: frontend
    spec:
      containers:
        - image: ssensini/mean-frontend:1.0.0
          name: frontend
          ports:
            - containerPort: 4200
          resources: {}
      restartPolicy: Always
status: {}
