Cap 13/nodejs-mongo-kubernetes/mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mongo
  name: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - args:
            - mongod
            - --port
            - "27017"
          image: mongo:6.0.4
          livenessProbe:
            exec:
              command:
                - echo 'db.runCommand("ping").ok' | mongosh mongo:27017/mydb --quiet
            failureThreshold: 5
            initialDelaySeconds: 40
            periodSeconds: 10
            timeoutSeconds: 20
          name: mongo
          ports:
            - containerPort: 27017
          resources: {}
          volumeMounts:
            - mountPath: /data/db
              name: dbdata
      restartPolicy: Always
      volumes:
        - name: dbdata
          persistentVolumeClaim:
            claimName: dbdata
status: {}
