Cap 13/nodejs-mongo-kubernetes/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: backend
  name: backend
spec:
  ports:
    - name: "8081"
      port: 8081
      targetPort: 8081
  selector:
    app: backend
status:
  loadBalancer: {}
