Cap 13/nodejs-mongo-kubernetes/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: frontend
  name: frontend
spec:
  ports:
    - name: "4200"
      port: 4200
      targetPort: 4200
  selector:
    app: frontend
status:
  loadBalancer: {}
