Cap 13/nodejs-mongo-kubernetes/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: frontend-ingress
spec:
  rules:
    - host: mynodeapp.com
      http:
        paths:
          - backend:
              serviceName: frontend
              servicePort: 4200
